--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     padding: 0;
     font-family: 'Lora', serif;
     box-sizing: border-box;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 body{
@@ -56,7 +56,7 @@ section
     /* margin-top: 4%; */
     position: relative;
     width: 100%;
-    height: 100vh;
+    height: 60vh;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -108,6 +108,140 @@ section
     background-color: rgb(92, 231, 255);
     color: black;
     /* transition: ease-in-out; */
-    box-shadow: 0 10px 10px 0  rgb(92, 212, 252);
+    box-shadow: 0px 10px 10px 0px rgb(92, 212, 252);
 }
 
+
+/* about */
+.about
+{
+    /* background-color: red; */
+    height: 60vh;
+    position: relative;
+    overflow: hidden;
+    left: 10%;
+    /* z-index: 99999; */
+    
+}
+
+.about_name
+{
+    color: white;
+    position: relative;
+    width: 30%;
+    /* background-color: red; */
+    top: -80%;
+    left: 20%;
+}
+
+.about_name h3
+{
+    font-size: 3rem;
+}
+
+.about_name span
+{
+    font-size: 3rem;
+    position: absolute;
+    left: 30%;
+    top: -20%;
+    font-weight: 900;
+    overflow: hidden;
+    z-index: 999;
+}
+
+.about_img{
+   border-radius: 50%;
+   width: 25%; 
+   height: 50vh;
+}
+
+.about p
+{
+    color: white;
+    width: 60%;
+    position: relative;
+    top: -60%;
+    left: 30%;
+}
+
+.about button
+{
+    border: 3px solid rgb(92, 212, 252);
+    outline: none;
+    border-radius: 10px;
+    padding: 10px;
+    width: 10%;
+    position: relative;
+    top: -50%;
+    left: 30%;
+    transition: cubic-bezier(0.175, 0.885, 0.32, 1.275) 1s;
+    font-size: 1.2rem;
+    font-weight: 500;
+}
+
+.about button:hover
+{
+    background-color: rgb(92, 212, 252);
+    border: 3px solid white;
+}
+
+hr {
+    border: none;
+    border-top: 5px dotted;
+    width: 20%;
+    margin-left: 43%;
+    outline: none;
+    color: rgb(92, 212, 252);
+}
+
+/* skills */
+.skill_container
+{
+    color: white;
+    height: 55vh;
+    margin-top: 5%;
+    margin-left: 15%;
+    /* background-color: red; */
+    margin-bottom: 2%;
+}
+
+/* .skill_container
+{
+    display: flex;
+    justify-content: space-between;
+} */
+
+.skills
+{
+    font-size: 5rem;
+    font-weight: 900;
+}
+
+.skill_icons
+{
+    position: absolute;
+    left: 50%;
+    margin-top: -5%;
+    overflow-x: hidden;
+}
+
+
+.skill_name
+{
+    display: flex;
+    overflow-x: hidden;
+    justify-content: space-between;
+    /* width: 100%; */
+}
+
+.first_skill
+{
+    font-size: .7rem;
+}
+
+.second_skill
+{
+    margin-right: 5%;
+    font-size: .7rem;
+}
