--- a/style.css
+++ b/style.css
@@ -245,3 +245,205 @@ hr {
     margin-right: 5%;
     font-size: .7rem;
 }
+
+/* Projects */
+
+.project_container
+{
+    height: 190vh;
+    margin-bottom: 5%;
+    /* background-color: red; */
+}
+
+.project_container h1
+{
+    color: white;
+    font-size: 5rem;
+    margin-left: 40%;
+}
+
+.pro_1 {
+    margin-left: 10%;
+    height: 300px;
+    width: 30%;
+    border-radius: 10%;
+    filter: sepia(50%); /* Apply both filters */
+    transition: filter .6s ease-in-out;
+}
+
+.pro_1:hover {
+    filter: sepia(50%) drop-shadow(8px 10px 8px gray); /* Apply both filters */
+    cursor: pointer;
+}
+
+.highlights
+{
+    position: absolute;
+    left: 38%;
+    margin-top: 5%;
+    color: white;
+    font-size: 5rem;
+    font-weight: 100;
+    z-index: 99;
+}
+
+.date_pro
+{
+    position: absolute;
+    left: 38%;
+    margin-top:13%;
+    font-size: 2rem;
+    color: rgb(92, 231, 255);
+    font-weight: 100;
+    letter-spacing: .5rem;
+    z-index: 99;
+}
+
+.dot_container
+{
+    display: flex;
+    flex-direction: column;
+    margin-left: 5%;
+    margin-top: 5%;
+    opacity: .5;
+}
+
+.zon
+{
+    position: relative;
+    top: -5%;
+    left: 30%;
+    /* background-color: red; */
+    width: 80%;
+    display: flex;
+    justify-content: center;
+}
+
+.zon_img
+{
+    width: 35%;
+    height: 40vh;
+    object-fit: fill;
+    z-index: 99;
+    cursor: pointer;
+    transition: opacity 1s ease-in-out;
+}
+
+.zon_img:hover
+{
+    transition: 1s;
+    opacity: .8;
+}
+
+.zon2_img
+{
+    width: 35%;
+    height: 40vh;
+    object-fit: fill;
+    position: relative;
+    left: -2%;
+    margin-top: 5%;
+    opacity: .5;
+    cursor: pointer;
+    transition: opacity 1s ease-in-out;
+}
+
+.zon2_img:hover
+{
+    transition: 1s;
+    z-index: 100;
+    opacity: 1;
+}
+
+.proj_zon
+{
+    position: absolute;
+    margin-top: -18%;
+    left: 70%;
+    font-size: 3.5rem;
+    color: white;
+}
+
+.proj_zon span
+{
+    color: rgb(92, 212, 252);
+}
+
+.proj_zon_date
+{
+    position: absolute;
+    margin-top: -13%;
+    left: 70%;
+    font-size: 2.5rem;
+    color: white;
+    font-weight: 100;
+    letter-spacing: .3rem;
+}
+
+.proj_zon_date span
+{
+    color: rgb(92, 212, 252);
+}
+
+.dot2
+{
+    display: flex;
+    flex-direction: column;
+    float: right;
+    opacity: .6;
+}
+
+.tin_name
+{
+    position: absolute;
+    left: 25%;
+}
+
+.tin
+{
+    color: white;
+    font-size: 3.5rem;
+
+}
+
+.tin2
+{
+    color: white;
+    font-size: 2.5rem;
+    font-weight: 100;
+    letter-spacing: .6rem;
+}
+
+.tim
+{
+    width: 65%;
+    /* background-color: rgba(54, 12, 66, 0.384); */
+    height: 52vh;
+    margin-left: 5%;
+    display: flex;
+    justify-content: space-around;
+}
+
+.tim1
+{
+    height: 48vh;
+    width: 32%;
+    margin-left: 5%;
+    margin-top: 2%;
+    filter: grayscale(50%);
+}
+
+.tim3
+{
+    height: 20vh;
+    width: 65%;
+    margin: 20% 2% 0 2%;
+    filter: contrast(150%);
+}
+
+.tim2
+{
+    height: 48vh;
+    width: 32%;
+    filter: grayscale(50%);
+}
